--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -12,15 +12,16 @@
   },
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "content_scripts": [
   {
     "matches": ["http://*/*"],
     "css": [],
-    "js": ["metamaska.js"],
+    "js": ["popup.js"],
     "run_at": "document_end"
   }
-  ],
-  "web_accessible_resources": ["abis.js", "script.js"]
+  ]//,
+  //"web_accessible_resources": ["abis.js", "script.js"]
 }
